syntax = "proto3";
import "cluster.proto";
import "base.proto";
package ProtoMsg;

//SVR_MSG_REGISTER_DB
message PbSvrRegisterDBReqMsg {
   PbSvrBaseInfo        svr_info = 1;
};

message PbSvrRegisterDBResMsg {
   Ret ret = 1;
};

enum emDBEngin {
    DB_engine_invalid = 0;
    DB_engine_redis = 1;
    DB_engine_mysql = 2;
};

message PbSvrDBServiceReqMsg {
    emDBEngin  db_engine = 1;
    string req_msg_name = 2; //请求的消息名
    string req_data = 3;     //请求的数据
    string res_msg_name = 4;  //响应的消息名
};

message PbSvrDBServiceResMsg {
    Ret ret = 1;
    emDBEngin  db_engine = 2;
    string res_msg_name = 3;     //响应的消息名
    string res_data = 4;        //响应的数据
};
